Refactored dao classes and added missing tests